# NatKet

./: .flake8  .gitignore  app.py  db.sqlite3  pyproject.toml  requirements.txt  scripts.py
api/: endpoints.py  fields.py  schemas.py  tests.py
api/migrations/: 0001_initial.py  0002_alter_languagesupport_cover.py  0002_remove_languagesupport_description_and_more.py  0002_remove_objectwithimagefield_created_at_and_more.py  0003_alter_game_cover.py  0003_alter_releaseplatform_release_date.py  0004_alter_alternativetitle_title.py  0004_alter_game_story_line_alter_game_summary.py  0005_alter_alternativetitle_game.py  0005_alter_game_story_line_alter_game_summary.py  0006_alter_gamemode_slug_alter_genre_slug_and_more.py  0006_rename_image_id_imagebase_filename.py  0007_alter_collection_slug.py  0007_alter_imagebase_filename.py  0008_alter_website_url.py  0009_alter_agerating_options_alter_gamemode_options_and_more.py
api/models/: __init__.py  age_rating_model.py  alternative_name_model.py  alternative_title_model.py  alternative_titles.py  collection_model.py  creation_update_model.py  game_model.py  game_video_model.py  image_model.py  language_model.py  links_model.py  object_imagefield.py  platform_model.py  region_model.py  related_model.py  release_date_model.py  release_platform_model.py  website_model.py
api/schemas/: __init__.py  exception_schema.py  game_schema.py  gameplay_schema.py  language_schema.py  media_schema.py  meta_schema.py  related_schema.py  response_schema.py
api/services/: __init__.py  base_router.py
api_populators/: apps.py  tests.py
api_populators/migrations/: 0001_initial.py  (+1 more)
main/: api_router.py  asgi.py  celery.py  exceptions.py  settings.py  urls.py
utils/: __init__.py  custom_str.py  project_info.yaml  sample_codes.py
website/: urls.py  views.py
(+11 files in other folders)
