[tool.poetry]
name = "natket-api"
version = "1.0.0"
description = ""
authors = ["mrh0wl <h0wl.jacket@gmail.com>"]
readme = "README.md"
packages = [
    { include = "scripts.py"},
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
celery = "^5.2.7"
django-environ = "^0.9.0"
requests = "^2.28.2"
djantic = "^0.7.0"
pillow = "^9.4.0"
gunicorn = "^20.1.0"
language-data = "^1.1"
langcodes = "^3.3.0"
pyyaml = "^6.0"
psycopg2-binary = "^2.9.5"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
kolo = "^2.4.2"
waitress = "^2.1.2"
isort = "^5.12.0"
autoflake = "^2.0.2"

[tool.isort]
multi_line_output = 3
line_length = 130
include_trailing_comma = false

[tool.poetry.group.inline-test.dependencies]
ipykernel = "^6.21.2"

[tool.poetry.scripts]
dev = "scripts:dev"
seed = "scripts:seed"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
